[FIX] mail: remove chatter node in dialog
Completely remove the unnecessary chatter node when the form is
in a dialog instead of simply hiding it with a d-none css class.

This also fixes css rules that used the presence of a chatter
to differentiate between a basic form and a modal form.
For example, this related PR adds a padding right to forms when
the chatter is present aside. However as a hidden chatter is also
present when the form is in a modal, the padding right is applied
and a horizontal scrollbar appear at the bottom of the dialog.
This fix prevents it to happen.

related PR: #149832

Task-10888

X-original-commit: f3c82305c34c00083035e99e58a570c5e1562060

--- a/addons/mail/static/src/chatter/web/form_renderer.scss
+++ b/addons/mail/static/src/chatter/web/form_renderer.scss
@@ -43,8 +43,3 @@
     padding-bottom: map-get($spacers, 5);
     width: 100%;
 }
-
-// FIX to hide chatter in dialogs when they are opened from an action returned by python code
-.modal .modal-dialog .o_form_view .o-mail-Form-chatter {
-    display: none;
-}
